# Hulk_Compiler

./: CMakeLists.txt  Makefile  README.md  hulk_lexer_def.txt  script.hulk
include/: code_generator.hpp  error_handler.hpp  print.h  source_location.hpp  tree.hpp  type_system.hpp
src/: SintacticoBison.ypp  as_expression.cpp  assignment.cpp  assignment_expression.cpp  ast_utils.cpp  base_expression.cpp  binary_operation.cpp  block_expression.cpp  block_statement.cpp  boolean.cpp  code_generator.cpp  context.cpp  custom_lexer.cpp  custom_lexer.hpp  custom_parser.cpp  custom_parser.hpp  enhanced_runtime_support.c  expression.cpp  expression_statement.cpp  for_statement.cpp  function_call.cpp  function_declaration.cpp  if_expression.cpp  if_statement.cpp  is_expression.cpp  let_in.cpp  lexer.lpp  lexer_generator.cpp  main_flex_bison.cpp  member_access.cpp  method_call.cpp  new_expression.cpp  node.cpp  number.cpp  print.c  print.cpp  program.cpp  return_statement.cpp  runtime_iter.c  runtime_support.c  (+10 more)
